Alteradas propriedades da aplicação

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,11 @@
-
-spring.datasource.url=jdbc:postgresql://localhost:5433/boracodar
-spring.datasource.username=postgres
-spring.datasource.password=admin
+spring.application.name=boraCodar
+spring.datasource.url=jdbc:mysql://localhost:3306/boracodar?createDatabaseIfNotExist=true&useSSL=false&allowPublicKeyRetrieval=true
+spring.datasource.username=root
+spring.datasource.password=root
 
 #config JPA
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.profiles.active=dev
-
 
